--- a/index.html
+++ b/index.html
@@ -1,283 +1,99 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NEONSHARD — paste</title>
-  <link rel="icon" href="data:,">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <style>
-    :root {
-      --bg: #0d0015;
-      --fg: #e0f7ff;
-      --neon-pink: #ff2aab;
-      --neon-cyan: #00f0ff;
-      --neon-purple: #9d00ff;
-      --neon-green: #39ff14;
-      --frame: #1a0033;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background: var(--bg);
-      color: var(--fg);
-      font-family: 'Courier New', Courier, monospace;
-      min-height: 100vh;
-      padding: 16px;
-      background-image:
-        radial-gradient(circle at 15% 15%, rgba(157,0,255,0.07) 0%, transparent 20%),
-        radial-gradient(circle at 85% 70%, rgba(0,240,255,0.06) 0%, transparent 25%);
-      image-rendering: pixelated;
-    }
-
-    .container {
-      max-width: 960px;
-      margin: 0 auto;
-    }
-
-    header {
-      text-align: center;
-      margin: 30px 0 40px;
-      text-transform: uppercase;
-      letter-spacing: 6px;
-    }
-
-    h1 {
-      font-size: 3.1rem;
-      background: linear-gradient(90deg, var(--neon-pink), var(--neon-cyan), var(--neon-purple), var(--neon-green));
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-      text-shadow:
-        0 0 10px #ff2aab88,
-        0 0 20px #00f0ff66,
-        0 0 40px #9d00ff44;
-      animation: glitch 4s infinite alternate;
-    }
-
-    .subtitle {
-      color: #00f0ff99;
-      font-size: 1.1rem;
-      margin-top: 8px;
-      text-shadow: 0 0 10px #00f0ff44;
-    }
-
-    textarea, input[type="text"] {
-      width: 100%;
-      background: #0f001a;
-      border: 1px solid #330066;
-      color: var(--neon-cyan);
-      font-family: 'Courier New', monospace;
-      font-size: 1.05rem;
-      padding: 14px;
-      margin: 12px 0;
-      resize: vertical;
-      min-height: 180px;
-      box-shadow: inset 0 0 12px #000000aa;
-    }
-
-    textarea:focus, input:focus {
-      outline: none;
-      border-color: var(--neon-pink);
-      box-shadow: 0 0 16px #ff2aab66, inset 0 0 12px #ff2aab22;
-    }
-
-    .controls {
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-      margin: 20px 0 30px;
-      justify-content: center;
-    }
-
-    button {
-      background: transparent;
-      border: 2px solid var(--neon-pink);
-      color: var(--neon-pink);
-      padding: 12px 28px;
-      font-size: 1.1rem;
-      cursor: pointer;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      transition: all 0.15s;
-      text-shadow: 0 0 8px currentColor;
-      box-shadow: 0 0 12px rgba(255,42,171,0.3);
-    }
-
-    button:hover {
-      background: var(--neon-pink);
-      color: #000814;
-      box-shadow: 0 0 24px #ff2aabcc;
-    }
-
-    button:active {
-      transform: translateY(2px);
-    }
-
-    #url {
-      flex: 1;
-      min-width: 260px;
-      background: #110022;
-      border: 1px solid #550099;
-      color: var(--neon-green);
-      padding: 12px 16px;
-      font-family: inherit;
-    }
-
-    #paste-content {
-      background: #0a0014;
-      border: 1px solid #220044;
-      padding: 20px;
-      white-space: pre-wrap;
-      word-break: break-all;
-      line-height: 1.45;
-      margin-top: 30px;
-      box-shadow: inset 0 0 30px #000;
-      color: #d4ffea;
-      text-shadow: 0 0 4px #39ff1499;
-      display: none;
-    }
-
-    .glitch-layer {
-      position: relative;
-    }
-
-    .glitch-layer::before,
-    .glitch-layer::after {
-      content: attr(data-text);
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.8;
-    }
-
-    .glitch-layer::before {
-      left: 2px;
-      text-shadow: -2px 0 var(--neon-cyan);
-      animation: glitch-1 3s infinite linear alternate-reverse;
-    }
-
-    .glitch-layer::after {
-      left: -2px;
-      text-shadow: 2px 0 var(--neon-pink);
-      animation: glitch-2 2.8s infinite linear alternate-reverse;
-    }
-
-    @keyframes glitch {
-      0%, 100% { transform: translate(0); }
-      20%  { transform: translate(-2px, 2px); }
-      40%  { transform: translate(2px, -2px); }
-      60%  { transform: translate(-1px, 1px); }
-      80%  { transform: translate(1px, -1px); }
-    }
-
-    @keyframes glitch-1 {
-      0%   { clip: rect(0, 9999px, 0, 0); transform: translate(0); }
-      5%   { clip: rect(20px, 9999px, 80px, 0); transform: translate(-5px, 2px); }
-      10%  { clip: rect(60px, 9999px, 140px, 0); transform: translate(4px, -3px); }
-      /* ... more keyframes can be added for crazier effect */
-    }
-
-    @keyframes glitch-2 {
-      0%   { clip: rect(0, 9999px, 0, 0); transform: translate(0); }
-      15%  { clip: rect(40px, 9999px, 120px, 0); transform: translate(3px, 5px); }
-      25%  { clip: rect(80px, 9999px, 200px, 0); transform: translate(-6px, -2px); }
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 80px;
-      color: #444466;
-      font-size: 0.9rem;
-    }
+    body { background:#0d0015; color:#e0f7ff; font-family:'Courier New',monospace; padding:20px; margin:0; }
+    .container { max-width:900px; margin:auto; text-align:center; }
+    h1 { font-size:3rem; background:linear-gradient(90deg,#ff2aab,#00f0ff); -webkit-background-clip:text; color:transparent; text-shadow:0 0 15px #ff2aab; }
+    textarea { width:100%; height:200px; background:#0f001a; border:2px solid #330066; color:#00f0ff; padding:12px; font-size:1.1rem; margin:15px 0; resize:vertical; }
+    textarea:focus { border-color:#ff2aab; box-shadow:0 0 15px #ff2aab66; outline:none; }
+    button { background:transparent; border:2px solid #ff2aab; color:#ff2aab; padding:12px 30px; font-size:1.2rem; cursor:pointer; margin:10px; text-transform:uppercase; }
+    button:hover { background:#ff2aab; color:#000; box-shadow:0 0 20px #ff2aab; }
+    #url-box { width:70%; padding:12px; background:#110022; border:1px solid #550099; color:#39ff14; font-family:inherit; margin:10px; display:none; }
+    #status { color:#ff2aab; margin:15px; font-size:1.1rem; }
+    #view { background:#0a0014; border:1px solid #220044; padding:20px; margin-top:30px; white-space:pre-wrap; display:none; }
   </style>
 </head>
 <body>
-
 <div class="container">
+  <h1>NEONSHARD</h1>
+  <p>dead drops • no logs • 1997 energy</p>
 
-  <header>
-    <h1 class="glitch-layer" data-text="NEONSHARD">NEONSHARD</h1>
-    <div class="subtitle">dead drops • no logs • 1997 energy</div>
-  </header>
-
-  <main>
-    <textarea id="input" placeholder="drop your text here..."></textarea>
-
-    <div class="controls">
-      <button onclick="createPaste()">BURN →</button>
-      <input type="text" id="url" readonly placeholder="your link appears here">
-      <button onclick="copyUrl()">COPY</button>
+  <div id="editor">
+    <textarea id="paste" placeholder="Type or paste your text here..."></textarea>
+    <div>
+      <button id="burnBtn">BURN → CREATE LINK</button>
+      <input id="url-box" readonly placeholder="Your share link will appear here">
+      <button onclick="navigator.clipboard.writeText(document.getElementById('url-box').value); alert('Copied!');">COPY LINK</button>
     </div>
+    <div id="status"></div>
+  </div>
 
-    <pre id="paste-content"></pre>
-  </main>
-
-  <footer>
-    404 lives matter • encrypted in glitter • 2025
-  </footer>
-
+  <pre id="view"><code></code></pre>
 </div>
 
 <script>
-  const API_BASE = window.location.origin + '/paste'; // Railway will serve this
+  const status = document.getElementById('status');
+  const burnBtn = document.getElementById('burnBtn');
+  const API = window.location.origin + '/api/save';  // backend endpoint we'll add
 
-  async function createPaste() {
-    const content = document.getElementById('input').value.trim();
-    if (!content) return alert("nothing to burn...");
+  burnBtn.onclick = async () => {
+    const text = document.getElementById('paste').value.trim();
+    if (!text) {
+      status.textContent = '→ Nothing to burn...';
+      return;
+    }
+
+    status.textContent = 'Burning...';
+    burnBtn.disabled = true;
 
     try {
-      const res = await fetch(API_BASE, {
+      const res = await fetch(API, {
         method: 'POST',
-        headers: { 'Content-Type': 'text/plain' },
-        body: content
+        headers: {'Content-Type': 'text/plain'},
+        body: text
       });
 
-      if (!res.ok) throw new Error(await res.text());
+      if (!res.ok) throw new Error(`Server said: ${res.status} ${await res.text()}`);
 
       const key = await res.text();
-      const url = `${window.location.origin}/${key}`;
+      const link = `${window.location.origin}/${key}`;
 
-      document.getElementById('url').value = url;
-      document.getElementById('paste-content').style.display = 'none';
-      alert('paste burned → ' + url);
-    } catch (err) {
-      alert('something died: ' + err.message);
+      document.getElementById('url-box').value = link;
+      document.getElementById('url-box').style.display = 'inline-block';
+      status.textContent = 'Success! Your paste is live.';
+    } catch (e) {
+      status.innerHTML = `Error: ${e.message}<br>Check browser console (F12) or Railway logs.`;
+      console.error(e);
+    } finally {
+      burnBtn.disabled = false;
     }
-  }
+  };
 
-  async function loadPasteIfAny() {
-    const path = window.location.pathname.slice(1);
-    if (!path) return;
+  // If URL has a key (e.g. /abc123), load the paste
+  (async () => {
+    const key = location.pathname.slice(1);
+    if (!key) return;
+
+    document.getElementById('editor').style.display = 'none';
+    document.getElementById('view').style.display = 'block';
 
     try {
-      const res = await fetch(API_BASE + '/' + path);
+      const res = await fetch(`/api/get/${key}`);
       if (!res.ok) throw new Error();
-
       const text = await res.text();
-      document.getElementById('input').style.display = 'none';
-      document.getElementById('paste-content').textContent = text;
-      document.getElementById('paste-content').style.display = 'block';
-      document.querySelector('.controls').style.display = 'none';
-    } catch {}
-  }
-
-  function copyUrl() {
-    const el = document.getElementById('url');
-    if (!el.value) return;
-    el.select();
-    navigator.clipboard.writeText(el.value);
-    alert('link snatched');
-  }
-
-  // init
-  loadPasteIfAny();
+      const code = document.querySelector('#view code');
+      code.textContent = text;
+      hljs.highlightElement(code);
+    } catch {
+      document.body.innerHTML += '<h2 style="color:red;text-align:center;">Paste expired or not found</h2>';
+    }
+  })();
 </script>
 </body>
 </html>
