--- a/index.html
+++ b/index.html
@@ -1,46 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>NEONSHARD — paste</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-  <style>
-    body { background:#0d0015; color:#e0f7ff; font-family:'Courier New',monospace; padding:20px; margin:0; }
-    .container { max-width:900px; margin:auto; text-align:center; }
-    h1 { font-size:3rem; background:linear-gradient(90deg,#ff2aab,#00f0ff); -webkit-background-clip:text; color:transparent; text-shadow:0 0 15px #ff2aab; }
-    textarea { width:100%; height:200px; background:#0f001a; border:2px solid #330066; color:#00f0ff; padding:12px; font-size:1.1rem; margin:15px 0; resize:vertical; }
-    textarea:focus { border-color:#ff2aab; box-shadow:0 0 15px #ff2aab66; outline:none; }
-    button { background:transparent; border:2px solid #ff2aab; color:#ff2aab; padding:12px 30px; font-size:1.2rem; cursor:pointer; margin:10px; text-transform:uppercase; }
-    button:hover { background:#ff2aab; color:#000; box-shadow:0 0 20px #ff2aab; }
-    #url-box { width:70%; padding:12px; background:#110022; border:1px solid #550099; color:#39ff14; font-family:inherit; margin:10px; display:none; }
-    #status { color:#ff2aab; margin:15px; font-size:1.1rem; }
-    #view { background:#0a0014; border:1px solid #220044; padding:20px; margin-top:30px; white-space:pre-wrap; display:none; }
-  </style>
-</head>
-<body>
-<div class="container">
-  <h1>NEONSHARD</h1>
-  <p>dead drops • no logs • 1997 energy</p>
-
-  <div id="editor">
-    <textarea id="paste" placeholder="Type or paste your text here..."></textarea>
-    <div>
-      <button id="burnBtn">BURN → CREATE LINK</button>
-      <input id="url-box" readonly placeholder="Your share link will appear here">
-      <button onclick="navigator.clipboard.writeText(document.getElementById('url-box').value); alert('Copied!');">COPY LINK</button>
-    </div>
-    <div id="status"></div>
-  </div>
-
-  <pre id="view"><code></code></pre>
-</div>
-
 <script>
   const status = document.getElementById('status');
   const burnBtn = document.getElementById('burnBtn');
-  const API = window.location.origin + '/api/save';  // backend endpoint we'll add
+  const host = window.location.host;
+  const API_SAVE = `https://${host}/api/save`;
+  const API_GET = `https://${host}/api/get/`;
 
   burnBtn.onclick = async () => {
     const text = document.getElementById('paste').value.trim();
@@ -53,29 +16,32 @@
     burnBtn.disabled = true;
 
     try {
-      const res = await fetch(API, {
+      const res = await fetch(API_SAVE, {
         method: 'POST',
         headers: {'Content-Type': 'text/plain'},
         body: text
       });
 
-      if (!res.ok) throw new Error(`Server said: ${res.status} ${await res.text()}`);
+      if (!res.ok) {
+        const errorText = await res.text();
+        throw new Error(`Server said: ${res.status} ${errorText}`);
+      }
 
       const key = await res.text();
-      const link = `${window.location.origin}/${key}`;
+      const link = `https://${host}/${key}`;
 
       document.getElementById('url-box').value = link;
       document.getElementById('url-box').style.display = 'inline-block';
-      status.textContent = 'Success! Your paste is live.';
+      status.textContent = 'Success! Your paste is live. → ' + link;
     } catch (e) {
-      status.innerHTML = `Error: ${e.message}<br>Check browser console (F12) or Railway logs.`;
+      status.innerHTML = `Error: ${e.message}<br>Check F12 Console or Railway logs.`;
       console.error(e);
     } finally {
       burnBtn.disabled = false;
     }
   };
 
-  // If URL has a key (e.g. /abc123), load the paste
+  // Load paste if key in URL
   (async () => {
     const key = location.pathname.slice(1);
     if (!key) return;
@@ -84,7 +50,7 @@
     document.getElementById('view').style.display = 'block';
 
     try {
-      const res = await fetch(`/api/get/${key}`);
+      const res = await fetch(API_GET + key);
       if (!res.ok) throw new Error();
       const text = await res.text();
       const code = document.querySelector('#view code');
@@ -95,5 +61,3 @@
     }
   })();
 </script>
-</body>
-</html>
