--- a/index.html
+++ b/index.html
@@ -1,61 +1,25 @@
-const { Hono } = require('hono');
-const { serve } = require('@hono/node-server');
-const { nanoid } = require('nanoid');
+const http = require('http');
 const fs = require('fs');
-const path = require('path');
 
-const app = new Hono();
-const PASTES = new Map();
+console.log('=== MINIMAL SERVER STARTED ===');
+console.log('Current files in root:', fs.readdirSync('.').join(', '));
 
-// Serve index.html on root and paste URLs
-const serveHtml = (c) => {
-  try {
-    const htmlPath = path.join(__dirname, 'index.html');
-    console.log('Trying to serve:', htmlPath);
-    if (!fs.existsSync(htmlPath)) {
-      console.error('index.html NOT FOUND at:', htmlPath);
-      return c.text('index.html missing on server', 500);
-    }
-    const html = fs.readFileSync(htmlPath, 'utf8');
-    return c.html(html);
-  } catch (err) {
-    console.error('Error serving HTML:', err.message);
-    return c.text('Server error serving page', 500);
-  }
-};
+let pageContent = '<h1>DEBUG TEST PAGE</h1><p>If you see this, the server is running but index.html was not found or loaded.</p><p>Check Railway logs for "files in root" line.</p>';
 
-app.get('/', serveHtml);
+try {
+  pageContent = fs.readFileSync('./index.html', 'utf8');
+  console.log('index.html loaded successfully (size ~' + pageContent.length + ' bytes)');
+} catch (err) {
+  console.log('Could not load index.html: ' + err.message);
+}
 
-app.get('/:key', (c) => {
-  const key = c.req.param('key');
-  if (PASTES.has(key) || key === 'api' || key === 'save' || key === 'get') {
-    return c.redirect('/'); // avoid conflict with api routes
-  }
-  return serveHtml(c);
+const server = http.createServer((req, res) => {
+  console.log('Received request: ' + req.method + ' ' + req.url);
+  res.writeHead(200, {'Content-Type': 'text/html'});
+  res.end(pageContent);
 });
 
-// API routes
-app.post('/api/save', async (c) => {
-  const text = await c.req.text();
-  if (!text.trim()) return c.text('Empty', 400);
-  const key = nanoid(10);
-  PASTES.set(key, text);
-  console.log('Paste created:', key);
-  return c.text(key);
-});
-
-app.get('/api/get/:key', (c) => {
-  const content = PASTES.get(c.req.param('key'));
-  return content ? c.text(content) : c.notFound();
-});
-
-// Debug route to test if server is alive
-app.get('/debug', (c) => c.text('Server is alive! Current time: ' + new Date().toISOString()));
-
-const port = process.env.PORT || 3000;
-serve({
-  fetch: app.fetch,
-  port,
-}, () => {
-  console.log(`NEONSHARD running on port ${port}`);
+const PORT = process.env.PORT || 3000;
+server.listen(PORT, '0.0.0.0', () => {
+  console.log('=== SERVER LISTENING ON PORT ' + PORT + ' ===');
 });
