--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h1>Simple Paste</h1>
+  <h1>Imisury Paste</h1>
   <textarea id="content" placeholder="Paste your text here..."></textarea>
   <br>
   <button onclick="createPaste()">Create Paste</button>
