--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Simple Paste</title>
+  <title>Imisury Paste</title>
   <style>
     body { font-family: monospace; background:#111; color:#eee; padding:20px; max-width:900px; margin:auto; }
     textarea { width:100%; height:300px; background:#222; color:#0f0; border:1px solid #444; padding:12px; font-size:1.1rem; }
