--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 </head>
 <body>
 
+<div class="toolbar">
+  <input type="text" id="title" placeholder="Paste title (optional)" />
+
+  <div class="visibility-toggle" id="visibilityToggle" data-value="public">
+    <span class="eye">👁️</span>
+    <span class="label">Public</span>
+  </div>
+</div>
+  
   <div class="container">
     <h1>Imisury Paste</h1>
 
